--- a/app/assets/stylesheets/publishers.scss
+++ b/app/assets/stylesheets/publishers.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Publishers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#publishers thead {
+	background-color: #9B59B6;
+}
